<resources>
    <string name="app_name">GitFit</string>
    <string name="menu_log">Log</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_preferences">Edit User</string>
    <string name="menu_history">History</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="Dropdown_sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="DropDown_Activity_Index">
        <item>Sedentary</item>
        <item>Lightly active</item>
        <item>Moderately active</item>
        <item>Very active</item>
        <item>Extremely active</item>
    </string-array>

    <string-array name="Food_creation_Dropdown">
        <item>Unit</item>
        <item>Weigth (g)</item>
        <item>Volume (L)</item>
    </string-array>


</resources>
