<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nunomorais.a123.MainActivity">

    <Button
        android:id="@+id/log_button"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginBottom="27dp"
        android:text="@string/menu_log"
        app:layout_constraintBottom_toTopOf="@+id/inventary_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/inventary_button"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginBottom="26dp"
        android:text="@string/menu_inventary"
        app:layout_constraintBottom_toTopOf="@+id/recipes_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/preferences_button"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:text="@string/menu_preferences"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_button" />

    <Button
        android:id="@+id/recipes_button"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:text="@string/menu_recipes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="205dp" />

    <Button
        android:id="@+id/progress_button"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="26dp"
        android:text="@string/menu_progress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipes_button" />

    <Button
        android:id="@+id/history_button"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:text="@string/menu_history"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/progress_button" />
</android.support.constraint.ConstraintLayout>
